Initial GitHub pages site with Jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: zheng-shi-du
+title: zhengshidu.github.io
 email: lucasfelipe248@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Um site com textos traduzidos do chinês para o português e vice-versa, apresentando 
@@ -34,7 +34,7 @@ plugins:
 
 domain: zhengshidu.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://zhengshidu.github.io  # the base hostname and protocol for your site, e.g. http://example.com
-baseurl: /zhengshidu/      # place folder name if the site is served in a subfolder
+baseurl: /zhengshidu.github.io      # place folder name if the site is served in a subfolder
 
 
 # Exclude from processing.
